Refactor project for core module and its snakeyaml implementation.